--- a/src/main/resources/templates/item/list.html
+++ b/src/main/resources/templates/item/list.html
@@ -14,13 +14,13 @@
             <th>발행일</th>
             <th>가격</th>
         </tr>
-        <tr th:each="book : ${bookList}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.author}"></td>
-            <td th:text="${book.publisher}"></td>
-            <td th:text="${book.publishDate}"></td>
-            <td th:text="${book.price}"></td>
+        <tr th:each="item : ${items}">
+            <td th:text="${item.id}"></td>
+            <td th:text="${item.title}"></td>
+            <td th:text="${item.author}"></td>
+            <td th:text="${item.publisher}"></td>
+            <td th:text="${item.publishDate}"></td>
+            <td th:text="${item.price}"></td>
         </tr>
     </table>
 </body>
