--- a/src/main/resources/templates/item/list.html
+++ b/src/main/resources/templates/item/list.html
@@ -2,26 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Book List</title>
+    <title>Item List</title>
 </head>
 <body>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>제목</th>
-            <th>저자</th>
-            <th>출판사</th>
-            <th>발행일</th>
-            <th>가격</th>
-        </tr>
-        <tr th:each="item : ${items}">
-            <td th:text="${item.id}"></td>
-            <td th:text="${item.title}"></td>
-            <td th:text="${item.author}"></td>
-            <td th:text="${item.publisher}"></td>
-            <td th:text="${item.publishDate}"></td>
-            <td th:text="${item.price}"></td>
-        </tr>
-    </table>
+    <th:block th:if="${not #lists.isEmpty(items)}">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>이름</th>
+                <th>가격</th>
+                <th>수량</th>
+            </tr>
+            <tr th:each="item : ${items}">
+                <td th:text="${item.id}"></td>
+                <td th:text="${item.name}"></td>
+                <td th:text="${item.price}"></td>
+                <td th:text="${item.stock}"></td>
+            </tr>
+        </table>
+    </th:block>
+    <input type="button" th:onclick="'location.href=\'' + @{/item/add} + '\''" value="등록">
 </body>
 </html>
