--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -5,8 +5,9 @@
     <title>Item List</title>
 </head>
 <body>
+    <h2>상품 정보</h2>
     <th:block th:if="${not #lists.isEmpty(items)}">
-        <table>
+        <table th:border="1">
             <tr>
                 <th>ID</th>
                 <th>이름</th>
@@ -15,9 +16,9 @@
             </tr>
             <tr th:each="item : ${items}">
                 <td th:text="${item.id}"></td>
-                <td th:text="${item.name}"></td>
+                <td><a th:href="@{'/item/' + ${item.id}}" th:value="${item.name}"></a></td>
                 <td th:text="${item.price}"></td>
-                <td th:text="${item.stock}"></td>
+                <td th:text="${item.stockQuantity}"></td>
             </tr>
         </table>
     </th:block>
