--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -5,7 +5,7 @@
     <title>Item List</title>
 </head>
 <body>
-    <h2>상품 정보</h2>
+    <h2>상품 목록</h2>
     <th:block th:if="${not #lists.isEmpty(items)}">
         <table th:border="1">
             <tr>
@@ -16,7 +16,7 @@
             </tr>
             <tr th:each="item : ${items}">
                 <td th:text="${item.id}"></td>
-                <td><a th:href="@{'/item/' + ${item.id}}" th:value="${item.name}"></a></td>
+                <td><a th:href="@{'/item/' + ${item.id}}" th:text="${item.name}"></a></td>
                 <td th:text="${item.price}"></td>
                 <td th:text="${item.stockQuantity}"></td>
             </tr>
